# lib/api-spec/openapi.yaml
@@ -1040,6 +1040,9 @@ components:
           enum: [text, voice]
         position:
           type: integer
+        nsfw:
+          type: boolean
+          default: false
         createdAt:
           type: string
           format: date-time
@@ -1067,6 +1070,8 @@ components:
         topic:
           type: [string, 'null']
           maxLength: 1024
+        nsfw:
+          type: boolean
 
     # Message schemas
     Message:
